--- a/2018-06-08-PB-kMeans-Uebung.ipynb
+++ b/2018-06-08-PB-kMeans-Uebung.ipynb
@@ -21,7 +21,7 @@
     "## Aufgabe 1\n",
     "\n",
     "Binden Sie alle notwendigen Bibliotheken ein und laden Sie den Standarddatensatz `USArrests` als Dataframe ein. <br>\n",
-    "Wie viele __Anmerkung(1): Nach der neuen deutschen Rechtschreibung: immer auseinander.__ Merkmalswerte liegen bei diesem Datensatz vor? <br>\n",
+    "Wie viele Merkmalswerte liegen bei diesem Datensatz vor? <br>\n",
     "Wie viele Einträge hat jeder Merkmalswert? Welche Bedeutung hat diese Zahl? <br>\n",
     "Welcher Merkmalswert hat den höchsten Mittelwert?"
    ]
@@ -40,7 +40,7 @@
     "## Aufgabe 2\n",
     "\n",
     "Lassen Sie sich die ersten Datensätze anzeigen. Was könnte an den Werten problematisch sein? <br>\n",
-    "Führen Sie nachfolgend, __Anmerkung(2): \"Führen Sie nachfolgend\"? Was ist damit gemeint?__ dann die \"Verbesserung\" durch und überprüfen diese anhand der ersten Datensätze."
+    "Führen Sie nachfolgend eine Normalisierung der Werte durch und überprüfen diese anhand der ersten Datensätze."
    ]
   },
   {
@@ -57,7 +57,8 @@
     "## Aufgabe 3\n",
     "\n",
     "Bestimmen Sie, anhand der Ellenbogenmethode, die optimale Anzahl an Clustern/Gruppen. <br>\n",
-    "Führen Sie im nächsten Schritt den k-Means-Algorithmus durch und speichern Sie das Ergebnis. <br>\n",
+    "Führen Sie im nächsten Schritt den k-Means-Algorithmus durch (zuvor führen Sie `set.seed(1)` aus) und speichern Sie das Ergebnis. <br>\n",
+    "Dabei sind maximal 8 Iterationen erlaubt und es soll aus 25 zufällig erstellten Initialisierungsmengen ausgewählt werden. <br>\n",
     "Wie viele Elemente wurden der Gruppe 3 zugeordnet? <br>\n",
     "Welcher Gruppe ist Ohio zugeordnet? <br>\n",
     "Wie viel beträgt die Heterogenität aller Cluster (in %)?"
@@ -95,8 +96,9 @@
     "## Aufgabe 5\n",
     "\n",
     "Lassen Sie die Cluster graphisch darstellen. <br>\n",
-    "Die Grenzen der Cluster sollen in Form einer Ellipse verlaufen und jedes Element soll mit dem Zentroid verbunden sein. <br>\n",
-    "Hinweis: Nutze die Funktion `fviz_cluster`."
+    "Hinweis: Nutze die Funktion `fviz_cluster`. <br>\n",
+    "Welche beiden Verbrechensarten werden im Schaubild hauptsächlich für die beiden Dimensionen verwendet? <br>\n",
+    "Was bedeuten positive bzw. negative Achsenwerte in Bezug auf die Häufigkeit der Verbrechen?"
    ]
   },
   {
@@ -119,7 +121,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.4"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
