Überarbeitete Ausarbeitung zu Clustering mit k-Means
Quellenhinweis zu EBook im Theorieteil eingefügt.
Überarbeitung der "Denormalisierung"-Berechnung.

--- a/2018-06-08-PB-kMeans.ipynb
+++ b/2018-06-08-PB-kMeans.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Clustering mit k-Means\n",
     "\n",
+    "Als Grundlage für die Ausarbeitung des Theorieteils diente das E-Book: \"Machine Learning with R\" von Brett Lantz.\n",
+    "\n",
     "Das *Clustering* gehört zum Feld des *unüberwachten Lernens*. Dabei werden Daten automatisiert in Cluster, Gruppen oder \"ähnlichen\" Objekten eingeteilt. Zuvor besitzt man jedoch keine Kenntnis darüber, wie die Gruppen am Ende aussehen sollen. Da wir deshalb auch nicht genau wissen können wonach wir schauen sollen, dient *Clustering* eher zum Herausfinden von Wissen, als für das Vorhersagen. Es erlaubt somit einen Einblick in natürliche Gruppierungen innerhalb eines Datensatzes.\n",
     "\n",
     "Wie kann der Computer wissen, wann eine Gruppe endet bzw. startet, ohne dabei fortgeschrittenes Wissen zu haben, was eine bestimmte Gruppe umfasst?\n",
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -789,9 +791,9 @@
        "<table>\n",
        "<thead><tr><th scope=col>Sepal.Length</th><th scope=col>Sepal.Width</th><th scope=col>Petal.Length</th><th scope=col>Petal.Width</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1.549278 </td><td>2.618000 </td><td>0.5403051</td><td>0.1520833</td></tr>\n",
-       "\t<tr><td>5.587393 </td><td>1.983761 </td><td>5.4996089</td><td>2.0619658</td></tr>\n",
-       "\t<tr><td>3.485929 </td><td>1.352459 </td><td>3.9724368</td><td>1.3729508</td></tr>\n",
+       "\t<tr><td>5.006000</td><td>3.428000</td><td>1.462000</td><td>0.246000</td></tr>\n",
+       "\t<tr><td>6.846154</td><td>3.082051</td><td>5.702564</td><td>2.079487</td></tr>\n",
+       "\t<tr><td>5.888525</td><td>2.737705</td><td>4.396721</td><td>1.418033</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -799,26 +801,26 @@
        "\\begin{tabular}{r|llll}\n",
        " Sepal.Length & Sepal.Width & Petal.Length & Petal.Width\\\\\n",
        "\\hline\n",
-       "\t 1.549278  & 2.618000  & 0.5403051 & 0.1520833\\\\\n",
-       "\t 5.587393  & 1.983761  & 5.4996089 & 2.0619658\\\\\n",
-       "\t 3.485929  & 1.352459  & 3.9724368 & 1.3729508\\\\\n",
+       "\t 5.006000 & 3.428000 & 1.462000 & 0.246000\\\\\n",
+       "\t 6.846154 & 3.082051 & 5.702564 & 2.079487\\\\\n",
+       "\t 5.888525 & 2.737705 & 4.396721 & 1.418033\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "Sepal.Length | Sepal.Width | Petal.Length | Petal.Width | \n",
        "|---|---|---|\n",
-       "| 1.549278  | 2.618000  | 0.5403051 | 0.1520833 | \n",
-       "| 5.587393  | 1.983761  | 5.4996089 | 2.0619658 | \n",
-       "| 3.485929  | 1.352459  | 3.9724368 | 1.3729508 | \n",
+       "| 5.006000 | 3.428000 | 1.462000 | 0.246000 | \n",
+       "| 6.846154 | 3.082051 | 5.702564 | 2.079487 | \n",
+       "| 5.888525 | 2.737705 | 4.396721 | 1.418033 | \n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "  Sepal.Length Sepal.Width Petal.Length Petal.Width\n",
-       "1 1.549278     2.618000    0.5403051    0.1520833  \n",
-       "2 5.587393     1.983761    5.4996089    2.0619658  \n",
-       "3 3.485929     1.352459    3.9724368    1.3729508  "
+       "1 5.006000     3.428000    1.462000     0.246000   \n",
+       "2 6.846154     3.082051    5.702564     2.079487   \n",
+       "3 5.888525     2.737705    4.396721     1.418033   "
       ]
      },
      "metadata": {},
@@ -829,10 +831,10 @@
     "result_old <- result$center\n",
     "rdf = as.data.frame(result_old)\n",
     "\n",
-    "rdf$Sepal.Length <- max(iris$Sepal.Length) * rdf$Sepal.Length\n",
-    "rdf$Sepal.Width <- max(iris$Sepal.Width) * rdf$Sepal.Width\n",
-    "rdf$Petal.Length <- max(iris$Petal.Length) * rdf$Petal.Length\n",
-    "rdf$Petal.Width <- max(iris$Petal.Width) * rdf$Petal.Width\n",
+    "rdf$Sepal.Length <- rdf$Sepal.Length * (max(iris$Sepal.Length) - min(iris$Sepal.Length)) + min(iris$Sepal.Length)\n",
+    "rdf$Sepal.Width <- rdf$Sepal.Width * (max(iris$Sepal.Width) - min(iris$Sepal.Width)) + min(iris$Sepal.Width)\n",
+    "rdf$Petal.Length <- rdf$Petal.Length * (max(iris$Petal.Length) - min(iris$Petal.Length)) + min(iris$Petal.Length)\n",
+    "rdf$Petal.Width <- rdf$Petal.Width * (max(iris$Petal.Width) - min(iris$Petal.Width)) + min(iris$Petal.Width)\n",
     "rdf"
    ]
   },
@@ -845,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
